# platform

./: .cursorrules  .deploy-trigger  .gitignore  .mcp.json  .pre-commit-config.yaml  .yamllint.yaml  2025-07-19-this-session-is-being-continued-from-a-previous-co.txt  ARGO_MIGRATION_GUIDE.md  CLAUDE.md  CONTROLLER_TROUBLESHOOTING.md  Dockerfile  GitHub-Apps-Agent-Migration-Plan.md  GitHub-Apps-Automation-Options.md  LICENSE  Makefile  README.md  ROADMAP.md  TOOLMAN_INTEGRATION_SUMMARY.md  TOOL_CATALOG_PLAN.md  agent.md  analyze-logs.sh  check-mcp.sh  client-config.json  code-job-configuration-analysis.md  code-job-refactor-implementation-plan.md  codebase-analysis.json  crd-test-plan.md  cto-config.example.json  cto-config.json  cto-config.template.json  cursor_review_codebase_for_new_example.md  cursor_review_test_plan_and_project_con.md  cursor_testing_mcp_tool_for_implementat.md  debug-pod.yaml  debug-simple.yaml  delete_recent_actions.sh  dist-workspace.toml  docs-job-complete-logs.txt  docs-job-logs.txt  monitor-mcp.sh  (+33 more)
.cursor/: mcp.json  (+1 more)
controller/: Cargo.toml  Dockerfile  clippy.toml
controller/.taskmaster/docs/: codebase.md
controller/common/: Cargo.toml
controller/common/src/: lib.rs
controller/common/src/models/: code_request.rs  config.rs  pm_task.rs  response.rs
controller/core/: Cargo.toml
controller/core/src/: lib.rs
controller/core/src/controllers/: config.rs  mod.rs
controller/core/src/crds/: coderun.rs  docsrun.rs
controller/core/src/tasks/: mod.rs  types.rs
controller/mcp/: Cargo.toml
controller/mcp/src/: agents.rs  main.rs  tools.rs
controller/src/: lib.rs
controller/src/crds/: coderun.rs
controller/src/tasks/code/: resources.rs  status.rs
controller/src/tasks/docs/: resources.rs
mcp/: Cargo.toml  dist-workspace.toml
mcp/src/: main.rs  tools.rs
orchestrator/: .dockerignore  .gitignore  CODE_TASK_ARCHITECTURE.md  CONTINUE_VS_RESUME_DOCUMENTATION.md  Cargo.toml  Dockerfile  Dockerfile.claude-code  Dockerfile.mcp-wrapper  Dockerfile.toolman  README.md  TASKRUN_CONTEXT_PRESERVATION.md  TASKRUN_CONTEXT_PRESERVATION_SIMPLIFIED.md  controller-refactor-analysis.md  demo-app-task1.json  demo-app-task2-noauth.json  demo-app-task3-auth.json  dist-workspace.toml  install-mcp-server.sh  race-test-docsrun.yaml  test-cli-regression.sh  test-github-integration.json  test-model-request.json  test-taskrun.json
orchestrator/.cargo/: config.toml
orchestrator/.orchestrator-cli-archive/src/: api.rs  validation.rs
orchestrator/.orchestrator-cli-archive/src/prompts/: acceptance_criteria_prompt.txt  prompt_md_prompt.txt
orchestrator/.taskmaster/docs/: acceptance-criteria.md  design-spec.md  prompt.md
orchestrator/.taskmaster/tasks/: tasks.json
orchestrator/cli/: Cargo.toml
orchestrator/cli/src/: api.rs  commands.rs  docs_generator.rs  main.rs  output.rs
orchestrator/common/src/: error.rs
orchestrator/common/src/models/: code_request.rs  config.rs  docs_request.rs  job.rs  mod.rs  pm_task.rs  request.rs  response.rs  task.rs
orchestrator/core/: Cargo.toml
orchestrator/core/src/: lib.rs  main.rs
orchestrator/core/src/crds/: coderun.rs  docsrun.rs  mod.rs
orchestrator/core/src/handlers/: code_handler.rs  common.rs  docs_handler.rs  mod.rs
orchestrator/docker/: claude-entrypoint.sh  entrypoint.sh
orchestrator/docs/: api-reference.md  build-system.md  dynamic-tool-configuration-implementation-summary.md  implementation-agent-design.md  paranoid-engineer-system-prompt.txt  task-documentation-generation-flow.md  toolman-selective-filtering.md
orchestrator/mcp/: Cargo.toml
orchestrator/mcp-server/: Cargo.toml
orchestrator/mcp-server/src/: main.rs  orchestrator_tools.rs  tools.rs
orchestrator/mcp/src/: main.rs  tools.rs
orchestrator/orchestrator-cli/: Cargo.toml
orchestrator/orchestrator-cli-archive/: Cargo.toml
orchestrator/orchestrator-cli-archive/src/: commands.rs  interactive.rs  main.rs
orchestrator/orchestrator-cli/src/: api.rs  commands.rs  docs_generator.rs  main.rs  output.rs
orchestrator/orchestrator-cli/src/prompts/: design_spec_prompt.txt  task_md_prompt.txt
orchestrator/orchestrator-common/: Cargo.toml
orchestrator/orchestrator-common/src/: lib.rs
orchestrator/orchestrator-common/src/models/: code_request.rs  config.rs  docs_request.rs  job.rs  mod.rs  pm_task.rs  request.rs  webhook.rs
orchestrator/orchestrator-core/: Cargo.toml
orchestrator/orchestrator-core/src/: lib.rs  main.rs  main_mcp_wrapper.rs  main_taskrun.rs  main_toolman.rs  tool_mapping.rs
orchestrator/orchestrator-core/src/config/: README.md  controller_config.rs  default_config.yaml  mod.rs  toolman_default.json  toolman_example.json
orchestrator/orchestrator-core/src/controllers/: mod.rs  taskrun.rs  taskrun_old.rs
orchestrator/orchestrator-core/src/crds/: coderun.rs  docsrun.rs  mod.rs  taskrun.rs
orchestrator/orchestrator-core/src/handlers/: code_handler.rs  common.rs  docs_handler.rs  mod.rs  pm.rs  pm_taskrun.rs
orchestrator/orchestrator-core/src/k8s/: client.rs  mod.rs
orchestrator/orchestrator-core/src/services/: helm_client.rs  mod.rs
orchestrator/orchestrator-core/templates/: claude-enterprise-settings.json.hbs  claude-memory-docs.md.hbs  claude-settings-docs.json.hbs  claude-settings-implementation.json.hbs  docs-generation-container.sh.hbs  docs-generation-prep-job.sh.hbs  docs-generation-prompt.hbs  early-hook-test.sh.hbs  export-session.sh  export-session.sh.hbs  implementation-container.sh.hbs  implementation-prompt.hbs  init-container.sh.hbs  main-container-simplified.sh.hbs  main-container.sh.hbs  prep-job.sh.hbs  stop-hook-docs-pr.sh  stop-hook-docs-pr.sh.hbs  tool-mappings.json
orchestrator/orchestrator-core/tests/: k8s_client_test.rs
orchestrator/orchestrator-mcp/: Cargo.toml
orchestrator/orchestrator-mcp/src/: main.rs  tools.rs
orchestrator/scripts/: README.md  build-all.sh  build-toolman.sh  build.sh  check.sh  ci-checks.sh  run-integration-tests.sh  test-webhook.sh
orchestrator/tests/: README.md  k8s_integration_test.rs  simple_integration_test.rs
orchestrator/tools/: Cargo.toml
(+1361 files in other folders)
