[package]
name = "cto-mcp"
version = "0.2.0"
edition = "2021"
authors = ["5D team"]
license = "AGPL-3.0"
repository = "https://github.com/5dlabs/cto"
description = "5D Labs CTO Platform MCP server: Argo Workflows integration for AI development workflows"
homepage = "https://github.com/5dlabs/cto"

[[bin]]
name = "cto-mcp"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Logging and tracing
tracing = "0.1"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Encoding
base64 = "0.22"

# Cargo dist configuration for distribution
[package.metadata.dist]
dist = true