[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time handling
chrono = { workspace = true }

# Kubernetes types (for shared models)
k8s-openapi = { workspace = true }

# Async trait
async-trait = { workspace = true }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
serde_test = "1.0"