[package]
name = "fdl-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "5D Labs platform MCP server: Argo Workflows integration for AI development workflows"
homepage = "https://github.com/5dlabs/platform"

[[bin]]
name = "fdl-mcp"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Internal dependencies  
common = { path = "../common" }