[package]
name = "cto-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "5D Labs CTO Platform MCP server: Argo Workflows integration for AI development workflows"
homepage = "https://github.com/5dlabs/cto"

[[bin]]
name = "cto-mcp"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Time utilities
chrono = { workspace = true }

# Encoding
base64 = "0.22"

# Internal dependencies  
common = { path = "../common" }