[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "5D Labs platform orchestrator core API server (for Kubernetes deployment)"
homepage = "https://github.com/5dlabs/platform"

[[bin]]
name = "orchestrator-core"
path = "src/main.rs"

[package.metadata.dist]
# Don't distribute this package - it's for Docker deployment, not end users
dist = false

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Kubernetes
kube = { workspace = true }
kube-derive = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = { workspace = true }

# Time handling
chrono = { workspace = true }

# Text processing
regex = { workspace = true }
handlebars = { workspace = true }

# File system
tempfile = "3.8"

# Internal dependencies
common = { path = "../common" }

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
wiremock = { workspace = true }
uuid = { workspace = true }