[package]
name = "orchestrator-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }

# HTTP Client
reqwest = { workspace = true }
eventsource-client = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Time handling
chrono = { workspace = true }

# Internal dependencies
orchestrator-common = { path = "../orchestrator-common" }

# UUID generation
uuid = { workspace = true }

# Terminal detection
is-terminal = "0.4"

# Terminal utilities
prettytable-rs = "0.10"
dirs = "5.0"
textwrap = "0.16"

# Regex for validation
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"