[package]
name = "fivedlabs-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "5D Labs platform tools: CLI and MCP server for AI development workflows"
homepage = "https://github.com/5dlabs/platform"

# CLI binary
[[bin]]
name = "fdl"
path = "src/cli/main.rs"

# MCP server binary
[[bin]]
name = "fdl-mcp"
path = "src/mcp/main.rs"

[dependencies]
# CLI
clap = { workspace = true }
colored = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Time handling
chrono = { workspace = true }

# Internal dependencies
common = { path = "../common" }