[package]
name = "fivedlabs-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "5D Labs platform tools: Argo Workflows MCP server for AI development workflows"
homepage = "https://github.com/5dlabs/platform"

# MCP server binary
[[bin]]
name = "fdl-mcp"
path = "src/mcp/main.rs"

[dependencies]
# HTTP Client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# File system and process
uuid = { workspace = true }

# Internal dependencies  
common = { path = "../common" }